# reddit-meter-backend

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.pipeline  Makefile  README.md  app.yaml  main.py  pyproject.toml  requirements.txt  subreddits.json  test.ipynb  test_subreddits.json
app/: config.py  constants.py  logging_setup.py
app/api/: main.py
app/jobs/: runner.py
app/llm_annotation/: annotation_worker.py  combine_shards.py  create_shards.py  upload_hf_dataset.py  worker_annotate.py
app/ml/: inference.py  inference_test.py  preprocessing.py
app/models/: post.py
app/processing/: aggregate.py
app/reddit/: fetch.py
app/storage/: bigquery.py  bucket.py  firestore.py
app/utils/: utils.py
reddit/: fetch.py
requirements/: annot.txt
scripts/: fix_firestore_timestamp.ipynb
tests/: conftest.py  test_aggregate.py  test_annotation_worker.py  test_backend_integration.py  test_backend_staging.py  test_bigquery.py  test_bucket.py  test_config.py  test_firestore_repo.py  test_firestore_repo_compat.py  test_inference.py  test_main.py  test_ml_preprocessing.py  test_models_post.py  test_preprocessing.py  test_reddit_fetch.py  test_runner.py  test_runner_staging.py  test_utils_module.py
