[project]
name="reddit-meter-backend"
version="0.1.0"
description="backend for my Reddit Meter backend project"
requires-python="~=3.12"

dependencies = [
    "black>=25.1.0",
    "fastapi[all]>=0.115.13",
    "google-cloud-firestore>=2.21.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "memory-profiler>=0.61.0",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
    "secure>=1.0.1",
    "slowapi>=0.1.9",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
